# wellen

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: release.yml  test.yml
benches/: wavemem.rs
crates/wellen/: Cargo.toml
crates/wellen/src/: fst.rs
examples/: load_signals.rs
ext/ghw/: .gitignore
gtkw/: Cargo.toml
gtkw/inputs/: ghdl_oscar.gtkw  ghdl_oscar_test2.gtkw  waves.gtkw
gtkw/src/: lib.rs
inputs/: scope_with_comment.vcd.fst
inputs/ghdl/: ghdl_issue_538.ghw  pcpu.vcd.fst  wellen_issue_12.ghw
inputs/ghdl/oscar/: ghdl.fst  test.ghw  test.vhdl  test2.ghw  test2.vhdl  vhdl3.fst
inputs/icarus/: test1.vcd.fst
inputs/jtag/: atxmega256a3u-bmda-jtag.vcd
inputs/my-hdl/: sigmoid_tb.vcd.fst  top.vcd.fst
inputs/nvc/: xwb_fofb_shaper_filt_tb.fst  xwb_fofb_shaper_filt_tb_arrays.fst.vcd
inputs/questa-sim/: test.vcd.fst
inputs/sigrok/: libsigrok.vcd.fst
inputs/specs/: Readme.md  tracefile.vcd
inputs/surfer/: issue_145.vcd  issue_145.vcd.fst  picorv32.vcd.fst  spade.vcd  spade.vcd.fst  xx_1.vcd.fst
inputs/systemc/: waveform.vcd.fst
inputs/vcs/: Apb_slave_uvm_new.vcd.fst  datapath_log.vcd.fst  processor.vcd.fst
inputs/verilator/: basic_test.fst  vlt_dump.vcd.fst
inputs/wellen/: issue_5.vcd
inputs/xilinx_isim/: test.vcd.fst
py-wellen/: Cargo.toml  pyproject.toml
py-wellen/src/: convert.rs  lib.rs
pywellen/: Cargo.toml  Makefile  pyproject.toml
pywellen/pywellen/: __init__.py  pywellen.pyi  signal_builder.py
pywellen/src/: convert.rs  lib.rs
pywellen/tests/: swerv.py  test_regressions.py  test_vcd_vcd_compatibility.py  test_waveform.py
src/: dense.rs  detect.rs  fst.rs  ghw.rs  hierarchy.rs  lib.rs  main.rs  serialize.rs  signals.rs  simple.rs  values.rs  vcd.rs  viewers.rs  wavemem.rs
src/ghw/: common.rs  hierarchy.rs  mod.rs  signals.rs
tests/: detect.rs  diff_ghw.rs  diff_tests.rs  fst.rs  ghw.rs  ghw_diff.rs  surfer.rs  vcd.rs  vhdl.rs
wellen/: Cargo.toml  inputs
wellen/benches/: wavemem.rs
wellen/examples/: load_signals.rs  stream_signals.rs
wellen/inputs/: VCD_file_with_errors.vcd.fst
wellen/inputs/aldec/: SPI_Write.vcd.fst
wellen/inputs/amaranth/: array-names_wellen_issue_36.vcd  up_counter.vcd.fst
wellen/inputs/ftr/: my_db.ftr
wellen/inputs/gameroy/: trace_prefix.vcd
wellen/inputs/ghdl/: alu.vcd.fst  idea.vcd.fst  time_test.ghw  time_test.vhdl  wellen_issue_32.ghw  wellen_issue_34.ghw  wellen_issue_35.ghw  wellen_issue_53.ghw  wellen_issue_6.ghw
wellen/inputs/ghdl/oscar/: ali.ghw  ali.vhdl  ghdl.fst.vcd  vhdl3.fst.vcd  vhdltype.vcd
wellen/inputs/ghdl/wellen_issue_84/: ghdl.fst  ghdl.ghw  ghdl.vcd  ghdl2.fst  ghdl2.ghw  ghdl2.vcd
wellen/inputs/github_issues/: issue133.vcd  issue18.vcd  issue28.vcd  issue40.vcd  issue42.vcd
wellen/inputs/gtkwave-analyzer/: perm_current.vcd.fst  vcd_extensions.vcd
wellen/inputs/icarus/: CPU.vcd.fst  DCCrossbar.vcd  counter_tb.vcd  event_example.fst  event_example.vcd  rv32_soc_TB.vcd.fst  surfer_issue_256.vcd
wellen/inputs/migen/: fractional_time_stamp.vcd  migen.vcd  migen_original.vcd
wellen/inputs/model-sim/: CPU_Design.msim.vcd.fst  clkdiv2n_tb.vcd.fst
wellen/inputs/my-hdl/: Simple_Memory.vcd.fst
wellen/inputs/ncsim/: ffdiv_32bit_tb.vcd.fst
wellen/inputs/nvc/: manytypes2.vcd  overlay_tb_issue_21.fst  shortstring.fst  shortstring.vcd  tb_sys_clm_lram_m_wellen_issue_77.fst  vhdl_test_bool_issue_16.fst  xwb_fofb_shaper_filt_tb_arrays.fst
wellen/inputs/nvc/wellen_issue_84/: nvc.fst  nvc.vcd  nvc2.fst
wellen/inputs/pymtl3/: CGRA.vcd
wellen/inputs/quartus/: mipsHardware.vcd.fst  wave_registradores.vcd.fst
wellen/inputs/questa-sim/: dump.vcd.fst  wellen-issue-57-uart.vcd
wellen/inputs/riviera-pro/: dump.vcd.fst
wellen/inputs/surfer/: counter.vcd.fst  verilator_empty_scope.vcd.fst  xx_2.vcd.fst
wellen/inputs/systemc/: waveform.vcd.dual_lz4.fst  waveform.vcd.fastlz.fst  waveform.vcd.fastlz_lvl2.fst  wellen_issue_89.vcd
wellen/inputs/treadle/: GCD.vcd.fst
wellen/inputs/verilator/: long_name.fst  long_name.vcd  many_sv_datatypes.fst  surfer_issue_201.fst  surfer_issue_201.vcd  swerv1.vcd.fst  verilator-incomplete.fst  verilator-incomplete.fst.hier  verilator-pull-7255-t_trace_complex_structs_cc_fst.fst
wellen/inputs/vivado/: iladata.vcd.fst  vivado_surfer_test.vcd
wellen/inputs/wikipedia/: example.vcd
wellen/inputs/xilinx_isim/: test1.vcd.fst  test2x2_regex22_string1.vcd.fst
wellen/inputs/yosys_smtbmc/: surfer_issue_315.vcd
wellen/src/: compressed.rs  derived_signals.rs  fst.rs  ftr.rs  hierarchy.rs  lib.rs  signal_utils.rs  signals.rs  simple.rs  stream.rs  vcd.rs  viewers.rs  wavemem.rs
wellen/src/ghw/: common.rs  hierarchy.rs  mod.rs  signals.rs
wellen/src/signal/: compressed.rs  map.rs  mod.rs  signals.rs  source.rs  transform.rs  value.rs
wellen/tests/: compressed.rs  derived_signals.rs  detect.rs  diff_ghw.rs  diff_tests.rs  events.rs  fst.rs  ghw.rs  interactive.rs  stream.rs  surfer.rs  utils.rs  vcd.rs  verilator.rs  vhdl.rs
