# Copyright 2023-2024 The Regents of the University of California
# Copyright 2024-2026 Cornell University
# released under BSD 3-Clause License
# author: Kevin Laeufer <laeufer@cornell.edu>

[workspace]
resolver = "2"
members = ["wellen", "pywellen"]
default-members = ["wellen"]

[workspace.package]
version = "0.25.0"
edition = "2024"
rust-version = "1.90.0"
authors = ["Kevin Laeufer <laeufer@berkeley.edu>"]
description = "Fast VCD and FST library for waveform viewers written in Rust."
repository = "https://github.com/ekiwi/wellen"
license = "BSD-3-Clause"
keywords = ["vcd", "fst", "waveform", "wavedump"]


[workspace.dependencies]
fst-reader = "0.17.0"
leb128 = "0.2.5"
lz4_flex = "0.13.0"
memmap2 = "0.9.10"
rayon = "1.11.0"
num_enum = "0.7.6"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "2.1"
miniz_oxide = "0.9"
indexmap = "2.13"
smallvec = { version = "1.15.1", features = ["union"] }

# dev dependencies
itertools = "0.14.0"
vcd = "0.7.0"
clap = { version = "4.6", features = ["derive"] }
indicatif = "0.18"
proptest = "1.11"
wellen = { path = "wellen" }
rand = "0.10.1"

[profile.release]
debug = true
