[package]
name = "py-wellen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_wellen"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.18.0"
num-bigint = "0.4.6"
pyo3 = "0.21.1"
wellen = { workspace = true }
