[package]
name = "pywellen"
version.workspace = true
rust-version.workspace = true
edition = "2021"
authors = [
    "Kevin Laeufer <laeufer@cornell.edu>",
    "James Connolly <dogman3117@gmail.com>",
]

[lib]
name = "pywellen"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.6"
pyo3 = { version = "0.28.3", features = ["num-bigint"] }
wellen = { workspace = true }
