[project]
name = "pywellen"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",


]
dynamic = ["version"]
license = "BSD-3-Clause"

authors = [
  { name = "James Connolly", email = "dogman3117@gmail.com" },
  { name = "Kevin Laeufer", email = "laeufer@cornell.edu" },
]


[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"


[tool.maturin]
features = ["pyo3/extension-module"]
