[project]
name = "pywellen"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",


]
dynamic = ["version"]
license = "BSD-3-Clause"
description = "Fast VCD, GHW and FST wavedump reading."
readme = "Readme.md"
authors = [
  { name = "Kevin Laeufer", email = "laeufer@cornell.edu" },
  { name = "James Connolly", email = "dogman3117@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/ekiwi/wellen"
Issues = "https://github.com/ekiwi/wellen/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[tool.uv]
cache-keys = [{file = "pyproject.toml"}, {file = "Cargo.toml"}, {file = "src/*.rs"}, {file = "../wellen/src/*.rs"}, {file = "../wellen/src/**/*.rs"}]

