[package]
name = "wellen"
version.workspace = true
edition.workspace = true
rust-version = "1.73.0"
authors.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
include = ["Cargo.toml", "LICENSE", "Readme.md", "src/", "benches/"]
readme = "Readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fst-reader.workspace = true
leb128.workspace = true
lz4_flex.workspace = true
memmap2.workspace = true
rayon.workspace = true
num_enum.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
rustc-hash = "2.1"

[dev-dependencies]
itertools.workspace = true
vcd.workspace = true
clap.workspace = true
criterion.workspace = true
indicatif.workspace = true
proptest.workspace = true
bytesize = "1.3.0"


[[bench]]
name = "wavemem"
harness = false

[features]
# makes internal functions public for benchmarking
benchmark = []
serde1 = ["dep:serde"]
